--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
-
+<style>
+    html {
+        
+    }
+</style>
 <body>
     <div id="root"></div>
+    <script src="https://ngld.github.io/OverlayPlugin/assets/shared/common.min.js"></script>
     <script src="./index.js"></script>
 </body>
 
